--- a/addons/mrp/views/mrp_production_views.xml
+++ b/addons/mrp/views/mrp_production_views.xml
@@ -382,7 +382,7 @@
                                     <button type="object" name="action_product_forecast_report" title="Forecast Report" icon="fa-area-chart" column_invisible="parent.state != 'draft'" invisible="forecast_availability &lt; 0"/>
                                     <button type="object" name="action_product_forecast_report" title="Forecast Report" icon="fa-area-chart text-danger" column_invisible="parent.state != 'draft'" invisible="forecast_availability &gt;= 0"/>
                                     <!-- TODO put forecast back -->
-                                    <field name="forecast_availability" string="Reserved" column_invisible="True" widget="forecast_widget"/>
+                                    <field name="forecast_availability" string="Forecast" widget="forecast_widget"/>
                                     <field name="quantity" string="Reserved"
                                         decoration-success="product_uom_qty - quantity &gt; 0.0001"
                                         decoration-warning="quantity - product_uom_qty &gt; 0.0001"
