--- a/addons/l10n_in_ewaybill/views/account_move_views.xml
+++ b/addons/l10n_in_ewaybill/views/account_move_views.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <xpath expr="//button[@name='button_set_checked']" position="after">
-                <button name="action_open_ewaybill_form" string="Create E-waybill" class="oe_highlight" type="object" groups="account.group_account_invoice"/>
+                <button name="action_open_ewaybill_form" string="Create E-waybill" class="oe_highlight" type="object" groups="account.group_account_invoice" invisible="state != 'posted'"/>
             </xpath>
         </field>
     </record>
