--- a/addons/website/static/src/components/resource_editor/resource_editor.scss
+++ b/addons/website/static/src/components/resource_editor/resource_editor.scss
@@ -1,19 +1,19 @@
 $o-we-ace-color: #2F3129 !default;
 
-.o_ace_view_editor {
+.o_resource_editor {
     background: $o-we-ace-color;
     color: white;
     display: flex;
     flex-flow: column nowrap;
     opacity: 0.97;
 
-    .o_ace_view_editor_title {
+    .o_resource_editor_title {
         flex: 0 0 auto;
         display: flex;
         align-items: center;
         padding: $grid-gutter-width/4;
 
-        > .o_ace_type_switcher > button::after {
+        > .o_resource_editor_type_switcher > button::after {
             @include o-caret-down;
             margin-left: 4px;
         }
@@ -22,30 +22,30 @@ $o-we-ace-color: #2F3129 !default;
             flex: 0 0 auto;
             margin: 0 $grid-gutter-width/4;
 
-            &.o_include_option {
+            &.o_resource_editor_filter {
                 display: flex;
                 align-items: center;
                 font-size: 11px;
             }
 
-            &.o_res_list {
+            &.o_resource_editor_resource_list {
                 flex: 1 1 auto;
                 min-width: 60px;
             }
         }
     }
 
-    #ace-view-id {
+    #resource-editor-id {
         flex: 0 0 auto;
         padding: $grid-gutter-width/4 $grid-gutter-width/2;
         background-color: lighten($o-we-ace-color, 10%);
 
-        .o_ace_editor_resource_info {
+        .o_resource_editor_resource_info {
             color: #ebecee;
         }
     }
 
-    #ace-view-editor {
+    #resource-editor {
         @mixin ace-line-error-mixin {
             content: "";
             z-index: 1000;
