[FIX] website_cem_partner_assign: portal user access issue
Steps to Reproduce
===================
1. Open the CRM module and select a lead with a portal user assigned as a
   partner.
2. Convert the lead into an opportunity.
3. Log in as the portal user and attempt to access the Opportunity tab.
4. Encounter a 403 error.

Technical
==========
The error originated from the changes introduced in this commit https://github.com/odoo/odoo/pull/118701/commits/c1262c0522638b596426cbe43f69d4aa88a2aaed.
Portal users were unable to access the Opportunity page due to this alteration.

After this Commit
==================
Following the implementation of this commit, the issue will be resolved, and
portal users will be able to access the Opportunity page successfully.

Task-3557681

--- a/addons/website_crm_partner_assign/views/website_crm_partner_assign_templates.xml
+++ b/addons/website_crm_partner_assign/views/website_crm_partner_assign_templates.xml
@@ -411,7 +411,7 @@
                             <span t-field="opp.probability" />%
                         </td>
                         <td>
-                            <span class="badge text-bg-info rounded-pill" title="Current stage of the opportunity" t-esc="opp.stage_id.name" />
+                            <span class="badge text-bg-info rounded-pill" title="Current stage of the opportunity" t-esc="opp.sudo().stage_id.name" />
                         </td>
                     </tr>
                 </tbody>
@@ -603,7 +603,7 @@
                                 <small class="me-2 mt-1 float-start"><b>Stage:</b></small>
                                 <div t-foreach="stages[::-1]" t-as="stage" class="float-start">
                                     <i t-if="not stage_first" class="oi oi-chevron-right ms-2 me-1 small" style="opacity: 0.5"/>
-                                    <button type="button" t-att-data="stage.id" t-att-opp="opportunity.id" t-attf-class="btn btn-sm px-2 opp-stage-button #{'btn-secondary' if opportunity.stage_id.name != stage.name else 'btn-primary disabled'}">
+                                    <button type="button" t-att-data="stage.id" t-att-opp="opportunity.id" t-attf-class="btn btn-sm px-2 opp-stage-button #{'btn-secondary' if opportunity.sudo().stage_id.name != stage.name else 'btn-primary disabled'}">
                                         <span t-field="stage.name"/>
                                     </button>
                                 </div>
