--- a/addons/website_event_track/static/src/scss/event_track_templates_online.scss
+++ b/addons/website_event_track/static/src/scss/event_track_templates_online.scss
@@ -48,11 +48,12 @@
     .o_wevent_online_page_container {
         // Main panel: current track
         .o_wesession_track_main {
+            // TODO see if still necessary, but it was breaking the layout
             // Force side panel min-width to account for potential Youtube chat
             // And adapt main panel max-width accordingly.
-            @include media-breakpoint-up(md) {
-                max-width: calc(100% - 22rem);
-            }
+            // @include media-breakpoint-up(md) {
+            //     max-width: calc(100% - 22rem);
+            // }
 
             @media screen and (min-width: 1900px) {
                 // return to bootstrap value for col-lg-9 / 10 breakpoint if screen is big enough
@@ -69,9 +70,9 @@
         // Left panel: other tracks
         .o_wesession_track_aside {
             // Force side panel min-width to account for potential Youtube chat
-            @include media-breakpoint-up(md) {
-                min-width: 22rem;
-            }
+            // @include media-breakpoint-up(md) {
+            //     min-width: 22rem;
+            // }
 
             @media screen and (min-width: 1900px) {
                 min-width: auto;
