--- a/addons/website_event_exhibitor/views/event_exhibitor_templates_list.xml
+++ b/addons/website_event_exhibitor/views/event_exhibitor_templates_list.xml
@@ -58,77 +58,9 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"/>
         </div>
         <div class="offcanvas-body p-0">
-            <div class="accordion accordion-flush">
-                <form class="o_wevent_event_tags_mobile_form" action="#" method="POST">
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed"
-                            type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target=".o_wevent_offcanvas_country"
-                            aria-expanded="false"
-                            aria-controls="o_wevent_offcanvas_country">
-                            By Country
-                        </button>
-                    </h2>
-                    <div class="o_wevent_offcanvas_country accordion-collapse collapse">
-                        <div class="accordion-body pt-0">
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    <a t-att-href="'/event/%s/exhibitors?%s' % (
-                                                slug(event),
-                                                keep_query('*', search_countries='')
-                                            )">
-                                        All Countries
-                                    </a>
-                                </li>
-                                <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
-                                <t t-foreach="sponsor_countries" t-as="sponsor_country">
-                                    <label t-attf-class="dropdown-item {{ 'active' if sponsor_country.id in search_countries.ids else '' }}">
-                                        <input class="d-none" type="checkbox" name="sponsor_country" multiple="multiple"
-                                            t-att-value="sponsor_country.id"
-                                            t-att-checked="'checked' if sponsor_country.id in search_countries.ids else None"/>
-                                        <t t-out="sponsor_country.name"/>
-                                    </label>
-                                </t>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed"
-                            type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target=".o_wevent_offcanvas_country"
-                            aria-expanded="false"
-                            aria-controls="o_wevent_offcanvas_country">
-                            By Level
-                        </button>
-                    </h2>
-                    <div class="o_wevent_offcanvas_country accordion-collapse collapse">
-                        <div class="accordion-body pt-0">
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    <a >
-                                        All Levels
-                                    </a>
-                                </li>
-                                <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
-                                <t t-foreach="sponsor_types" t-as="sponsor_type">
-                                    <label t-attf-class="dropdown-item {{ 'active' if sponsor_type.id in search_sponsorships.ids else '' }}">
-                                        <input class="d-none" type="checkbox" name="sponsor_type" multiple="multiple"
-                                            t-att-value="sponsor_type.id"
-                                            t-att-checked="'checked' if sponsor_type.id in search_sponsorships.ids else None"/>
-                                        <t t-out="sponsor_type.name"/>
-                                    </label>
-                                </t>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                </form>
-            </div>
+            <form class="o_wevent_event_tags_mobile_form" action="#" method="POST">
+                <div class="o_wesponsor_topbar_filters_mobile accordion accordion-flush"/>
+            </form>
         </div>
     </div>
 </template>
@@ -158,6 +90,43 @@
             </div>
         </div>
     </xpath>
+    <xpath expr="//div[hasclass('o_wesponsor_topbar_filters_mobile')]" position="inside">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target=".o_wevent_offcanvas_country"
+                    aria-expanded="false"
+                    aria-controls="o_wevent_offcanvas_country">
+                    By Country
+                </button>
+            </h2>
+            <div class="o_wevent_offcanvas_country accordion-collapse collapse">
+                <div class="accordion-body pt-0">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                            <a t-att-href="'/event/%s/exhibitors?%s' % (
+                                        slug(event),
+                                        keep_query('*', search_countries='')
+                                    )">
+                                All Countries
+                            </a>
+                        </li>
+                        <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
+                        <t t-foreach="sponsor_countries" t-as="sponsor_country">
+                            <label t-attf-class="dropdown-item {{ 'active' if sponsor_country.id in search_countries.ids else '' }}">
+                                <input class="d-none" type="checkbox" name="sponsor_country" multiple="multiple"
+                                    t-att-value="sponsor_country.id"
+                                    t-att-checked="'checked' if sponsor_country.id in search_countries.ids else None"/>
+                                <t t-out="sponsor_country.name"/>
+                            </label>
+                        </t>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </xpath>
 </template>
 
 <!-- Topbar: optional sponsorship filters -->
@@ -182,6 +151,40 @@
                         <t t-out="sponsor_type.name"/>
                     </label>
                 </t>
+            </div>
+        </div>
+    </xpath>
+    <xpath expr="//div[hasclass('o_wesponsor_topbar_filters_mobile')]" position="inside">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target=".o_wevent_offcanvas_country"
+                    aria-expanded="false"
+                    aria-controls="o_wevent_offcanvas_country">
+                    By Level
+                </button>
+            </h2>
+            <div class="o_wevent_offcanvas_country accordion-collapse collapse">
+                <div class="accordion-body pt-0">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                            <a >
+                                All Levels
+                            </a>
+                        </li>
+                        <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
+                        <t t-foreach="sponsor_types" t-as="sponsor_type">
+                            <label t-attf-class="dropdown-item {{ 'active' if sponsor_type.id in search_sponsorships.ids else '' }}">
+                                <input class="d-none" type="checkbox" name="sponsor_type" multiple="multiple"
+                                    t-att-value="sponsor_type.id"
+                                    t-att-checked="'checked' if sponsor_type.id in search_sponsorships.ids else None"/>
+                                <t t-out="sponsor_type.name"/>
+                            </label>
+                        </t>
+                    </ul>
+                </div>
             </div>
         </div>
     </xpath>
