--- a/addons/event/static/src/scss/event_foldable_badge_report.scss
+++ b/addons/event/static/src/scss/event_foldable_badge_report.scss
@@ -41,7 +41,7 @@
             box-shadow: -3px 3px 9px 0px rgba(0,0,0,0.51);
 
             .o_event_foldable_badge_ticket_wrapper_top {
-                min-height: 80mm;
+                min-height: 85mm;
             }
 
             .o_event_foldable_badge_font_faded {
@@ -49,18 +49,27 @@
             }
 
             .o_event_foldable_badge_barcode {
-                min-height: 35mm;
+                min-height: 30mm;
             }
         }
     }
 
     .o_event_foldable_badge_step {
-        position: absolute;
-        padding: 3px 9px;
-        top: 5mm;
-        left: 0mm;
+        position: relative;
+        top: 15mm;
+        left: 5mm;
+        width: 1.2em;
+        height: 1.2em;
+        padding-top: 2px;
         border-radius: 50%;
         background-color: black;
         color: white;
+        margin-bottom: 10px;
     }
+
+    .o_event_foldable_badge_barcode_container .ticket_name {
+        line-height: 20mm;
+    }
+
+
 }
