--- a/addons/web/static/src/libs/fontawesome/css/font-awesome.css
+++ b/addons/web/static/src/libs/fontawesome/css/font-awesome.css
@@ -4,13 +4,13 @@
  */
 /* FONT PATH
  * -------------------------- */
-@font-face {
+/* @font-face {
   font-family: 'FontAwesome';
   src: url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: block;
-}
+} */
 .fa {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
