[FIX] sale_project: readonly delivered quantity of the SOL
Steps:
 - Open Projects
 - Go to Tasks
 - Create a SOL on the fly
 - Create a new product on the fly (click on 'create', not on 'create and edit')
 - There is a field for delivered quantity which is editable

 Issue:
 -The 'delivered quantity' is editable when it shouldn't be. It should only be
  editable when Invoice policy is Based on Delivered quantity(manual).

 Cause:
 - The readonly attribute was only given when delivered_quantity method is not manual.

 Fix:
 - By making delivered quantity field readonly for project task form view and
   editable if the product is configured to be invoiced on 'delivered quantity
   (manual)'.

 Task: 3522113

--- a/addons/sale_project/views/sale_order_line_views.xml
+++ b/addons/sale_project/views/sale_order_line_views.xml
@@ -29,6 +29,12 @@
                     'default_detailed_type': 'service',
                 }</attribute>
             </field>
+            <field name="qty_delivered" position="before">
+                <field name="product_service_policy" invisible="1"/>
+            </field>
+            <field name="qty_delivered" position="attributes">
+                <attribute name="readonly">product_service_policy != 'delivered_manual'</attribute>
+            </field>
         </field>
     </record>
 
